--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
+  font-family: sans-serif;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Home */
+.main-banner {
+  background: url(https://bostonglobe-prod.cdn.arcpublishing.com/resizer/aexpSrzBWq7Uxh7eDKhURYHC-Vo=/1440x0/arc-anglerfish-arc2-prod-bostonglobe.s3.amazonaws.com/public/CT3VCBCJ5II6DM4QQY75UQKYRQ.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 600px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.banner-header {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 4rem;
+  color: #fff;
+  text-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transform: translate(-50%, 50%);
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  width: 80%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* form */
+.form-image {
+  height: 550px;
+  width: 100%;
+  background-size: cover;
+  margin-bottom: 40px;
 }
